--- a/themes/orecchia/layouts/partials/li_citation_old.html
+++ b/themes/orecchia/layouts/partials/li_citation_old.html
@@ -8,12 +8,6 @@
     {{ partial "page_metadata_authors" . }}
   </span>
   ({{- .Date.Format "2006" -}}).
-  {{ if site.Params.publications.links_title }} <!-- Create a link on the publication title -->
-    <a href="{{ .RelPermalink }}" itemprop="name">{{ .Title }}</a>.
-  {{ else }}
-    <a itemprop="name">{{ .Title }}</a>.
-  {{ end }}
-
   <a href="{{ .RelPermalink }}">{{ .Title }}</a>.
   {{ if .Params.publication_short }}
   {{- .Params.publication_short | markdownify -}}.
@@ -28,11 +22,7 @@
   <span class="article-metadata li-cite-author">
     {{ partial "page_metadata_authors" . }}.
   </span>
-  {{ if site.Params.publications.links_title }} <!-- Create a link on the publication title -->
-    <a href="{{ .RelPermalink }}" itemprop="name">{{ .Title }}</a>.
-  {{ else }}
-    <a itemprop="name">{{ .Title }}</a>.
-  {{ end }}
+  <a href="{{ .RelPermalink }}">{{ .Title }}</a>.
   {{ if .Params.publication_short }}
   {{- .Params.publication_short | markdownify -}},
   {{ else if .Params.publication }}
